Project

General

Profile

Actions

Bug #40755

closed

_txc_add_transaction error (2) No such file or directory not handled on operation 15 (op 1, counting from 0)

Added by Sage Weil almost 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2019-07-11T20:25:20.439 INFO:tasks.ceph.osd.9.smithi072.stderr:2019-07-11 20:25:20.414 7fb91867b700 -1 bluestore(/var/lib/ceph/osd/ceph-9) _txc_add_transaction error (2) No such file or directory not handled on operation 15 (op 1, counting from 0)
2019-07-11T20:25:20.440 INFO:tasks.ceph.osd.9.smithi072.stderr:2019-07-11 20:25:20.414 7fb91867b700 -1 bluestore(/var/lib/ceph/osd/ceph-9) unexpected error code
2019-07-11T20:25:20.452 INFO:tasks.ceph.osd.9.smithi072.stderr:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/14.2.1-619-ga347d29/rpm/el7/BUILD/ceph-14.2.1-619-ga347d29/src/os/bluestore/BlueStore.cc: In function 'voi
d BlueStore::_txc_add_transaction(BlueStore::TransContext*, ObjectStore::Transaction*)' thread 7fb91867b700 time 2019-07-11 20:25:20.415397
2019-07-11T20:25:20.453 INFO:tasks.ceph.osd.9.smithi072.stderr:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/14.2.1-619-ga347d29/rpm/el7/BUILD/ceph-14.2.1-619-ga347d29/src/os/bluestore/BlueStore.cc: 11452: ceph_abor
t_msg("unexpected error")
2019-07-11T20:25:20.453 INFO:tasks.ceph.osd.9.smithi072.stderr: ceph version 14.2.1-619-ga347d29 (a347d29e9a9f48a29042be78a4e58bd4ca5dbdfc) nautilus (stable)
2019-07-11T20:25:20.453 INFO:tasks.ceph.osd.9.smithi072.stderr: 1: (ceph::__ceph_abort(char const*, int, char const*, std::string const&)+0xdd) [0x55b7a532049d]
2019-07-11T20:25:20.453 INFO:tasks.ceph.osd.9.smithi072.stderr: 2: (BlueStore::_txc_add_transaction(BlueStore::TransContext*, ObjectStore::Transaction*)+0xc63) [0x55b7a58fc6d3]
2019-07-11T20:25:20.454 INFO:tasks.ceph.osd.9.smithi072.stderr: 3: (BlueStore::queue_transactions(boost::intrusive_ptr<ObjectStore::CollectionImpl>&, std::vector<ObjectStore::Transaction, std::allocator<ObjectStore::Transaction> >&, boost::intrusive_ptr<TrackedOp>, ThreadPool::TPHandle*)+0x526) [0x55b7a591b036]
2019-07-11T20:25:20.454 INFO:tasks.ceph.osd.9.smithi072.stderr: 4: (non-virtual thunk to PrimaryLogPG::queue_transactions(std::vector<ObjectStore::Transaction, std::allocator<ObjectStore::Transaction> >&, boost::intrusive_ptr<OpRequest>)+0x54) [0x55b7a5668c34]
2019-07-11T20:25:20.454 INFO:tasks.ceph.osd.9.smithi072.stderr: 5: (ReplicatedBackend::do_repop(boost::intrusive_ptr<OpRequest>)+0xaa9) [0x55b7a5762ae9]
2019-07-11T20:25:20.454 INFO:tasks.ceph.osd.9.smithi072.stderr: 6: (ReplicatedBackend::_handle_message(boost::intrusive_ptr<OpRequest>)+0x187) [0x55b7a5770f37]
2019-07-11T20:25:20.455 INFO:tasks.ceph.osd.9.smithi072.stderr: 7: (PGBackend::handle_message(boost::intrusive_ptr<OpRequest>)+0x87) [0x55b7a567a517]
2019-07-11T20:25:20.455 INFO:tasks.ceph.osd.9.smithi072.stderr: 8: (PrimaryLogPG::do_request(boost::intrusive_ptr<OpRequest>&, ThreadPool::TPHandle&)+0x695) [0x55b7a5626415]
2019-07-11T20:25:20.455 INFO:tasks.ceph.osd.9.smithi072.stderr: 9: (OSD::dequeue_op(boost::intrusive_ptr<PG>, boost::intrusive_ptr<OpRequest>, ThreadPool::TPHandle&)+0x1a9) [0x55b7a5460fe9]
2019-07-11T20:25:20.455 INFO:tasks.ceph.osd.9.smithi072.stderr: 10: (PGOpItem::run(OSD*, OSDShard*, boost::intrusive_ptr<PG>&, ThreadPool::TPHandle&)+0x62) [0x55b7a56fe582]
2019-07-11T20:25:20.456 INFO:tasks.ceph.osd.9.smithi072.stderr: 11: (OSD::ShardedOpWQ::_process(unsigned int, ceph::heartbeat_handle_d*)+0x9f4) [0x55b7a547dff4]
2019-07-11T20:25:20.456 INFO:tasks.ceph.osd.9.smithi072.stderr: 12: (ShardedThreadPool::shardedthreadpool_worker(unsigned int)+0x433) [0x55b7a5a7cc63]
2019-07-11T20:25:20.461 INFO:tasks.ceph.osd.9.smithi072.stderr: 13: (ShardedThreadPool::WorkThreadSharded::entry()+0x10) [0x55b7a5a7fd00]
2019-07-11T20:25:20.461 INFO:tasks.ceph.osd.9.smithi072.stderr: 14: (()+0x7dd5) [0x7fb93ba5bdd5]

/a/sage-2019-07-11_17:46:52-rados-wip-sage-testing-2019-07-11-1048-distro-basic-smithi/4110883
/a/sage-2019-07-11_17:46:52-rados-wip-sage-testing-2019-07-11-1048-distro-basic-smithi/4110893 (filestore variant)
/a/sage-2019-07-11_17:46:52-rados-wip-sage-testing-2019-07-11-1048-distro-basic-smithi/4110847

Related issues 1 (0 open1 closed)

Related to RADOS - Bug #40718: touch in txn on (old) nautilus osdDuplicate07/10/2019

Actions
Actions #1

Updated by Sage Weil almost 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Neha Ojha almost 5 years ago

  • Related to Bug #40718: touch in txn on (old) nautilus osd added
Actions #3

Updated by Sage Weil almost 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF