osd/ECTransaction,ReplicatedBackend: create op is new in octopus

Not nautilus!

Fixes: https://tracker.ceph.com/issues/40755
Signed-off-by: Sage Weil <sage@redhat.com>